<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFCFC"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="36sp"
        android:textColor="#FABEBE"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/using_your_email"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="#C4C4C4"/>
    
    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_gravity="center"
        android:textColorHint="#FABEBE"
        android:backgroundTint="#FABEBE"
        android:inputType="textPersonName"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_gravity="center"
        android:textColorHint="#FABEBE"
        android:backgroundTint="#FABEBE"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_gravity="center"
        android:textColorHint="#FABEBE"
        android:backgroundTint="#FABEBE"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="121dp"
        android:layout_height="39dp"
        android:text="@string/sign_up"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:background="#FABEBE"
        android:textColor="#FFFFFF"/>
</LinearLayout>