<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FABEBE"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/to_continue"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_continue"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="261dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_email"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:background="#FFFFFF"
        android:text="@string/login"
        android:textColor="#FFB6B9"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_a_member_yet"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/cat"
            android:layout_width="700dp"
            android:layout_height="305dp"
            android:layout_marginStart="-305dp"
            android:layout_marginTop="-95dp"
            android:layout_marginEnd="0dp"
            android:scr="@drawable/cat"

            android:visibility="visible"
            tools:srcCompat="@drawable/cat"
            tools:visibility="visible" />


    </LinearLayout>
</RelativeLayout>